<resources>
    <string name="app_name">My Braziliex App</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="price">R$ 13468,36</string>
    <string name="percent">73%</string>
    <string name="vol_description">Volume (24 hrs): </string>
    <string name="vol_value">R$ 36487,23 (Vol.)</string>
    <string name="qtd_value">XRP 36524,36</string>
    <string name="quantidade">Quantidade</string>
    <string name="estimated_balance_description">Saldo Estimado: R$ 6324,12</string>
    <string name="google_play_appname">My Braziliex Wallet</string>
    <string name="error_info_message">Ooops! Algo deu errado !\n Por favor verifique sua conexão e tente novamante</string>
    <string name="try_again">Tentar novamente</string>
</resources>